DevEditionAutoLogin/force-app/main/default/objects/Dev_Org_Setting__c/Dev_Org_Setting__c.object-meta.xml
<CustomObject>
    <label>Dev Org Setting</label>
    <nameField>
        <label>Dev Org Settings Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Dev Org Settings</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>