DevEditionAutoLogin/force-app/main/default/objects/Dev_Org_Setting__c/fields/ck__c.field-meta.xml
<CustomField>
    <fullName>ck__c</fullName>
    <label>CKey</label>
    <length>175</length>
    <maskChar>asterisk</maskChar>
    <maskType>all</maskType>
    <type>EncryptedText</type>
</CustomField>