DevEditionAutoLogin/force-app/main/default/objects/Dev_Org_Setting__c/fields/cs__c.field-meta.xml
<CustomField>
    <fullName>cs__c</fullName>
    <label>CSec</label>
    <length>175</length>
    <maskChar>asterisk</maskChar>
    <maskType>all</maskType>
    <type>EncryptedText</type>
</CustomField>